# SimpleCalculator

./: .gitignore  README.md  backedlist.py  calculator.py  calculatortests.py  nodes.py  operators.py  pyproject.toml  pytest.ini  rollingstring.py  trie.py
src/calculator/: README.md  __init__.py  _nodes.py  _utils.py  calculator.py  repl.py
tests/: test_calculator.py
