[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "customcalc"
version = "0.1.0"
description = "A customizable Python calculator with user-defined operators and constants."
readme = "README.md"
authors = [
    { name = "Adem Can", email = "ademfcan@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.20"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
